--- a/load_coffee - Copia/style.css
+++ b/load_coffee - Copia/style.css
@@ -1,14 +1,14 @@
 h1{
     text-align: center;
-    background-color: rgb(3, 65, 49);
+    background-color: #163f3b;
     font-family:Arial, Helvetica, sans-serif;
-    color: rgb(255, 236, 215);
+    color: bisque;
 
     
 }
 h2 {
     text-align: center;
-    background-color: rgb(3, 65, 49);
+    background-color: #163f3b;
     font-family: 'Courier New', Courier, monospace;
      color: bisque;
 }
@@ -18,11 +18,11 @@ p {
 }
     
 button {
-    background-color: rgb(3, 65, 49);
+    background-color: #163f3b;
     width: 100%;
     height: 50px;
     font-size: 20px;  
-    color: rgb(255, 236, 215);
+    color: bisque;
     border: none;
     border-radius: 25px;
     cursor: pointer;
@@ -37,16 +37,21 @@ button {
     }
 
     body{
-        background-color: rgb(255, 236, 215);
+        background-color: #e0d5c2;
     }
 
     a{
-        color: bisque;
+        color: rgb(255, 236, 215);
         text-decoration: none;
     }
     
     h3{
         font-family: 'Times New Roman', Times, serif;
     }
+
+    footer{
+        background-color: #163f3b; 
+    }
+
 
     
